[gd_scene load_steps=8 format=3 uid="uid://df5nbiygwfdeb"]

[ext_resource type="Script" path="res://Scripts/UI/resource_ui_entry.gd" id="1_4qxd5"]
[ext_resource type="Texture2D" uid="uid://cep3uutbm3nbm" path="res://Sprites/Circle.png" id="2_e80mr"]
[ext_resource type="Texture2D" uid="uid://bib3v5a1f2b2o" path="res://Sprites/UI/User.png" id="3_mxd3e"]
[ext_resource type="Texture2D" uid="uid://d1prnk2q4ke5m" path="res://Sprites/UI/Arrow.png" id="3_yp1id"]
[ext_resource type="Texture2D" uid="uid://conk3mnlxvmpn" path="res://Sprites/UI/ArrowBG.png" id="5_klcox"]
[ext_resource type="FontFile" uid="uid://bm50ve2s6rkjl" path="res://Sprites/Fonts/ReadexPro-Medium.ttf" id="6_26y08"]

[sub_resource type="LabelSettings" id="LabelSettings_rc13s"]
line_spacing = 0.0
font = ExtResource("6_26y08")
font_size = 18

[node name="Resource" type="GridContainer"]
offset_right = 30.0
offset_bottom = 61.0
size_flags_horizontal = 6
columns = 2
script = ExtResource("1_4qxd5")

[node name="IconContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Circle" type="TextureRect" parent="IconContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_e80mr")
expand_mode = 1

[node name="ResourceIcon" type="TextureRect" parent="IconContainer/Circle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource("3_mxd3e")
expand_mode = 5

[node name="IncreaseIcon" type="TextureRect" parent="IconContainer/Circle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -26.0
offset_right = 28.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(9, 9)
size_flags_vertical = 4
texture = ExtResource("5_klcox")
expand_mode = 1

[node name="IncreaseColor" type="TextureRect" parent="IconContainer/Circle/IncreaseIcon"]
unique_name_in_owner = true
self_modulate = Color(0.237539, 0.237539, 0.237539, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -18.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 18.0
grow_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_yp1id")
expand_mode = 1

[node name="ResourceAmount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "1
"
label_settings = SubResource("LabelSettings_rc13s")
horizontal_alignment = 1
vertical_alignment = 2
